# mem-stream

./: .gitignore  Cargo.toml  README.md  makefile
.github/workflows/: ci.yml
client/: Cargo.toml  Dockerfile
client/src/: main.rs
client/src/api/: handlers.rs  mod.rs  router.rs
client/src/client/: client.rs  mod.rs  pool.rs
server/: Cargo.toml  Dockerfile
server/src/: codec.rs  groups.rs  lru.rs  main.rs  proto.rs  seg_log.rs  server.rs
src/: main.rs  seg_log.rs
