[package]
name = "segmented-memory-storage-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
chrono = "0.4.44"
futures = "0.3.32"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bitcode = "0.6.9"
